[package]
name = "advent_of_code"
version = "0.8.0"
authors = ["Felix Spöttel <1682504+fspoettel@users.noreply.github.com>"]
edition = "2021"
default-run = "advent_of_code"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[features]
test_lib = []

[dependencies]
phf = { version = "0.11", features = ["macros"] }
pico-args = "0.5.0"
rayon = "1.8.0"
regex = "1.10.2"
